Issue #253 : fix overflow by setting screen relative font-size

--- a/src/app/components/questions/swipe/swipe.component.scss
+++ b/src/app/components/questions/swipe/swipe.component.scss
@@ -80,6 +80,7 @@
   background-color: var(--ion-color-inria-spe);
   box-shadow: 0 1px 8px 0 #D5DDE9;
   font-weight: bold;
+  font-size: clamp(12px, 2.3vh, 18px);
   color:white;
   z-index:10;
 
